Fix profile background position align left

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -61,6 +61,7 @@ main {
     height: 70px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     border-radius: 1000px;
     margin-bottom: 15px;
   }
